--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>🎞️ Cinefilos Poster Picker</title>
+
+  <!-- iPhone PWA support -->
+  <link rel="manifest" href="manifest.json" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <meta name="apple-mobile-web-app-title" content="Cinefilos" />
+  <link rel="apple-touch-icon" href="icons/icon-192.png" />
+
   <style>
     body {
       background: #111;
@@ -12,7 +20,6 @@
       text-align: center;
       padding: 20px;
     }
-
     .gallery-wrapper {
       overflow-x: scroll;
       -ms-overflow-style: none;
@@ -20,11 +27,9 @@
       padding: 10px;
       margin-top: 30px;
     }
-
     .gallery-wrapper::-webkit-scrollbar {
       display: none;
     }
-
     .gallery {
       display: flex;
       gap: 20px;
@@ -32,7 +37,6 @@
       scroll-snap-type: x mandatory;
       scroll-behavior: smooth;
     }
-
     .poster {
       scroll-snap-align: center;
       cursor: pointer;
@@ -50,7 +54,6 @@
       backface-visibility: hidden;
       perspective: 1000px;
     }
-
     .poster img {
       width: 100%;
       height: auto;
@@ -59,34 +62,22 @@
       backface-visibility: hidden;
       display: block;
     }
-
     .poster:hover {
       transform: scale(1.05);
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
     }
-
     .poster.selected {
       border: 3px solid #4fc3f7;
       box-shadow: 0 0 20px rgba(0, 191, 255, 0.7);
     }
-
-    /* Flip animation */
     @keyframes flipAnimation {
-      0% {
-        transform: rotateY(0deg);
-      }
-      50% {
-        transform: rotateY(180deg);
-      }
-      100% {
-        transform: rotateY(0deg);
-      }
+      0% { transform: rotateY(0deg); }
+      50% { transform: rotateY(180deg); }
+      100% { transform: rotateY(0deg); }
     }
-
     .poster.flip {
       animation: flipAnimation 0.8s ease forwards;
     }
-
     #randomPick {
       padding: 10px 20px;
       font-size: 18px;
@@ -97,18 +88,6 @@
       cursor: pointer;
       margin-top: 20px;
     }
-
-    #result {
-      margin-top: 30px;
-    }
-
-    #result img {
-      max-height: 200px;
-      margin-top: 10px;
-      border-radius: 10px;
-      box-shadow: 0 0 12px #000;
-    }
-
     #history {
       display: flex;
       flex-wrap: wrap;
@@ -119,7 +98,6 @@
       list-style: none;
       max-width: 1000px;
     }
-
     #history li {
       background: #222;
       padding: 10px;
@@ -129,14 +107,12 @@
       flex: 0 1 auto;
       box-shadow: 0 0 6px #000;
     }
-
     #history img {
       max-height: 100px;
       margin-top: 6px;
       border-radius: 6px;
       box-shadow: 0 0 6px #000;
     }
-
     #clearHistory {
       margin: 20px auto;
       padding: 10px 16px;
@@ -159,8 +135,6 @@
 
   <button id="randomPick">🎲 Pick a Random Movie</button>
 
-  <div id="result"></div>
-
   <h2>📜 Pick History</h2>
   <ul id="history"></ul>
   <button id="clearHistory">🧹 Clear History</button>
@@ -168,7 +142,6 @@
   <script>
     const apiKey = "225d3569";
     const gallery = document.getElementById("posterGallery");
-    const resultDiv = document.getElementById("result");
     const pickBtn = document.getElementById("randomPick");
     const clearBtn = document.getElementById("clearHistory");
     const historyList = document.getElementById("history");
@@ -253,10 +226,7 @@
     pickBtn.addEventListener("click", async () => {
       if (posters.length === 0) return;
 
-      // Remove any previous flip classes and deselect
-      posters.forEach(p => {
-        p.element.classList.remove('selected', 'flip');
-      });
+      posters.forEach(p => p.element.classList.remove('selected', 'flip'));
 
       const spinCount = 10;
       let selected = null;
@@ -273,21 +243,17 @@
         }
       }
 
-      // Trigger flip animation on final selected poster
       selected.element.classList.add('flip');
-
       selected.element.scrollIntoView({ behavior: "smooth", inline: "center" });
 
-      resultDiv.innerHTML = `
-        <p>🎉 Selected Movie: <strong>${selected.title}</strong> (${selected.runtime})</p>
+      const li = document.createElement('li');
+      li.innerHTML = `
+        <div><strong>${selected.title}</strong></div>
+        <div style="font-size: 0.9em; color: #aaa;">${selected.runtime}</div>
         <img src="${selected.posterUrl}" alt="${selected.title}" />
       `;
-
-      const li = document.createElement('li');
-      li.innerHTML = `<div>${selected.title}</div><img src="${selected.posterUrl}" alt="${selected.title}" />`;
       historyList.prepend(li);
 
-      // Remove flip class after animation ends so it can be reused next time
       selected.element.addEventListener('animationend', () => {
         selected.element.classList.remove('flip');
       }, { once: true });
@@ -298,6 +264,15 @@
     });
 
     buildGallery();
+  </script>
+
+  <!-- Service Worker for PWA -->
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('sw.js').then(() => {
+        console.log("✅ Service Worker registered");
+      });
+    }
   </script>
 </body>
 </html>
