--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>🎞️ Cinefilos Poster Picker</title>
 
-  <!-- iPhone PWA support -->
+  <!-- PWA Setup -->
   <link rel="manifest" href="manifest.json" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
@@ -22,8 +22,8 @@
     }
     .gallery-wrapper {
       overflow-x: scroll;
-      -ms-overflow-style: none;
       scrollbar-width: none;
+      -ms-overflow-style: none;
       padding: 10px;
       margin-top: 30px;
     }
@@ -32,35 +32,30 @@
     }
     .gallery {
       display: flex;
-      gap: 20px;
+      gap: 16px;
       padding: 10px;
       scroll-snap-type: x mandatory;
       scroll-behavior: smooth;
+      cursor: grab;
     }
     .poster {
       scroll-snap-align: center;
-      cursor: pointer;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
       display: flex;
       justify-content: center;
       align-items: center;
       border: 2px solid #333;
       border-radius: 12px;
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);
-      overflow: hidden;
+      box-shadow: 0 0 12px rgba(0, 0, 0, 0.4);
       background: #222;
-      padding: 10px;
-      min-width: 180px;
-      backface-visibility: hidden;
-      perspective: 1000px;
+      padding: 8px;
+      min-width: 200px;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
     .poster img {
-      width: 100%;
+      width: 200px;
       height: auto;
       border-radius: 8px;
       object-fit: cover;
-      backface-visibility: hidden;
-      display: block;
     }
     .poster:hover {
       transform: scale(1.05);
@@ -68,17 +63,29 @@
     }
     .poster.selected {
       border: 3px solid #4fc3f7;
-      box-shadow: 0 0 20px rgba(0, 191, 255, 0.7);
+      box-shadow: 0 0 20px #4fc3f7;
+      transform: scale(1.05);
+      z-index: 2;
+    }
+    .poster.flip {
+      animation: flipAnimation 0.8s ease forwards;
     }
     @keyframes flipAnimation {
       0% { transform: rotateY(0deg); }
       50% { transform: rotateY(180deg); }
       100% { transform: rotateY(0deg); }
     }
-    .poster.flip {
-      animation: flipAnimation 0.8s ease forwards;
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to   { opacity: 1; transform: translateY(0); }
     }
+    .fade-in {
+      animation: fadeIn 0.6s ease forwards;
+    }
+
     #randomPick {
+      margin: 20px auto;
       padding: 10px 20px;
       font-size: 18px;
       background: #27ae60;
@@ -86,7 +93,7 @@
       border: none;
       border-radius: 6px;
       cursor: pointer;
-      margin-top: 20px;
+      display: block;
     }
     #history {
       display: flex;
@@ -96,22 +103,21 @@
       margin: 30px auto 10px;
       padding: 0;
       list-style: none;
-      max-width: 1000px;
+      max-width: 1200px;
     }
     #history li {
       background: #222;
       padding: 10px;
       border-radius: 8px;
       text-align: center;
-      min-width: 120px;
-      flex: 0 1 auto;
-      box-shadow: 0 0 6px #000;
+      min-width: 200px;
+      box-shadow: 0 0 8px #000;
     }
     #history img {
-      max-height: 100px;
-      margin-top: 6px;
-      border-radius: 6px;
-      box-shadow: 0 0 6px #000;
+      max-height: 400px;
+      margin-top: 10px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px #000;
     }
     #clearHistory {
       margin: 20px auto;
@@ -135,7 +141,7 @@
 
   <button id="randomPick">🎲 Pick a Random Movie</button>
 
-  <h2>📜 Pick History</h2>
+  <h2>Pick History</h2>
   <ul id="history"></ul>
   <button id="clearHistory">🧹 Clear History</button>
 
@@ -147,12 +153,7 @@
     const historyList = document.getElementById("history");
     const posters = [];
 
-    const fallbackPosters = {
-      tt0134817: "posters/mecanica.jpg",
-      tt0110413: "posters/leon.png"
-    };
-
-    const entries = [
+       const entries = [
       { title: "Memento", imdbID: "tt0209144" },
       { title: "Up in Smoke", imdbID: "tt0078446" },
       { title: "The Vindicator", imdbID: "tt0092172" },
@@ -188,85 +189,65 @@
     ];
 
     async function fetchPosterAndBuild(movie) {
-      let posterUrl = "";
-
-      if (fallbackPosters[movie.imdbID]) {
-        posterUrl = fallbackPosters[movie.imdbID];
-      } else {
-        const query = movie.imdbID ? `i=${movie.imdbID}` : `t=${encodeURIComponent(movie.title)}`;
-        const res = await fetch(`https://www.omdbapi.com/?apikey=${apiKey}&${query}`);
-        const data = await res.json();
-
-        if (data.Response === "True") {
-          posterUrl = (data.Poster && data.Poster !== "N/A") ? data.Poster : "fallback.jpg";
-          movie.title = data.Title;
-          movie.runtime = data.Runtime || "–";
-        } else {
-          return;
-        }
+      const res = await fetch(`https://www.omdbapi.com/?apikey=${apiKey}&i=${movie.imdbID}`);
+      const data = await res.json();
+      if (data.Response === "True") {
+        const posterUrl = data.Poster && data.Poster !== "N/A" ? data.Poster : "fallback.jpg";
+        movie.title = data.Title;
+        movie.runtime = data.Runtime || "–";
+        const div = document.createElement("div");
+        div.className = "poster";
+        div.innerHTML = `<img src="${posterUrl}" alt="${movie.title}" title="${movie.title}" />`;
+        gallery.appendChild(div);
+        posters.push({ element: div, title: movie.title, runtime: movie.runtime, posterUrl });
       }
-
-      const div = document.createElement("div");
-      div.className = "poster";
-      div.innerHTML = `<img src="${posterUrl}" alt="${movie.title}" title="${movie.title}" />`;
-      gallery.appendChild(div);
-
-      posters.push({
-        element: div,
-        title: movie.title,
-        runtime: movie.runtime || "–",
-        posterUrl
-      });
     }
 
-    function buildGallery() {
-      entries.forEach(movie => fetchPosterAndBuild(movie));
+    function isAlreadyInHistory(title) {
+      return Array.from(historyList.children).some(li => li.textContent.includes(title));
     }
 
     pickBtn.addEventListener("click", async () => {
       if (posters.length === 0) return;
 
-      posters.forEach(p => p.element.classList.remove('selected', 'flip'));
+      posters.forEach(p => p.element.classList.remove('selected'));
 
-      const spinCount = 10;
-      let selected = null;
-
-      for (let i = 0; i < spinCount; i++) {
+      let selected;
+      for (let i = 0; i < 10; i++) {
         const index = Math.floor(Math.random() * posters.length);
         selected = posters[index];
-        selected.element.classList.add('selected');
-
+        selected.element.classList.add('flip');
         await new Promise(r => setTimeout(r, 100 + i * 30));
-
-        if (i < spinCount - 1) {
-          selected.element.classList.remove('selected');
-        }
+        selected.element.classList.remove('flip');
       }
 
-      selected.element.classList.add('flip');
+      selected.element.classList.add('selected');
       selected.element.scrollIntoView({ behavior: "smooth", inline: "center" });
 
-      const li = document.createElement('li');
-      li.innerHTML = `
-        <div><strong>${selected.title}</strong></div>
-        <div style="font-size: 0.9em; color: #aaa;">${selected.runtime}</div>
-        <img src="${selected.posterUrl}" alt="${selected.title}" />
-      `;
-      historyList.prepend(li);
-
-      selected.element.addEventListener('animationend', () => {
-        selected.element.classList.remove('flip');
-      }, { once: true });
+      if (!isAlreadyInHistory(selected.title)) {
+        const li = document.createElement('li');
+        li.classList.add('fade-in');
+        li.innerHTML = `
+          <div style="font-weight:bold; font-size: 1.2em;">${selected.title}</div>
+          <div style="font-size: 1em; color: #aaa;">${selected.runtime}</div>
+          <img src="${selected.posterUrl}" alt="${selected.title}" />
+        `;
+        historyList.prepend(li);
+      }
     });
 
     clearBtn.addEventListener("click", () => {
       historyList.innerHTML = '';
     });
 
+    function buildGallery() {
+      entries.forEach(movie => fetchPosterAndBuild(movie));
+    }
+
     buildGallery();
   </script>
 
-  <!-- Service Worker for PWA -->
+  <!-- PWA Service Worker -->
   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('sw.js').then(() => {
