--- a/Cinefilos/index.html
+++ b/Cinefilos/index.html
@@ -157,6 +157,11 @@
     const soundPick = document.getElementById("soundPick");
     const posters = [];
 
+        const fallbackPosters = {
+      tt0134817: "posters/mecanica.jpg",
+      tt0110413: "posters/leon.png"
+    };
+
    const entries = [
       { title: "Memento", imdbID: "tt0209144" },
       { title: "Up in Smoke", imdbID: "tt0078446" },
