--- a/Cinefilos/index.html
+++ b/Cinefilos/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>🎞️ Cinefilos Poster Picker</title>
-
+<img src="posters/mecania.jpg" alt="Flowers in Chania">
   <link rel="manifest" href="manifest.json" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
@@ -139,7 +139,7 @@
 
   <button id="randomPick">🎲 Pick a Random Movie</button>
 
-  <h2>rick History</h2>
+  <h2>pick History</h2>
   <ul id="history"></ul>
   <button id="clearHistory">🧹 Clear History</button>
 
