--- a/Cinefilos/index.html
+++ b/Cinefilos/index.html
@@ -144,7 +144,7 @@
   <button id="clearHistory">🧹 Clear History</button>
 
   <!-- Sound Effects -->
-  <audio id="soundSpin" src="sounds/spin.wa"></audio>
+  <audio id="soundSpin" src="sounds/spin.wav"></audio>
   <audio id="soundPick" src="sounds/pick.wav"></audio>
 
   <script>
