--- a/Cinefilos/index.html
+++ b/Cinefilos/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>🎞️ Cinefilos Poster Picker</title>
-<img src="posters/mecania.jpg" alt="Flowers in Chania">
+<img src="posters/mecanica.jpg" alt="1">
   <link rel="manifest" href="manifest.json" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
