--- a/Cinefilos/index.html
+++ b/Cinefilos/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>🎞️ Cinefilos Poster Picker</title>
-<img src="posters/mecanica.jpg" alt="1">
+  <title>🎞️<img src="posters/mecanica.jpg" alt="2"> Cinefilos Poster Picker</title>
+
   <link rel="manifest" href="manifest.json" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
