--- a/Cinefilos/index.html
+++ b/Cinefilos/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>🎞️<img src="posters/mecanica.jpg" alt="2"> Cinefilos Poster Picker</title>
+  <title>🎞️ Cinefilos Poster Picker</title>
 
   <link rel="manifest" href="manifest.json" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
