--- a/Cinefilos/index.html
+++ b/Cinefilos/index.html
@@ -131,7 +131,7 @@
   </style>
 </head>
 <body>
-  <h1>🎬 Choose a Movie</h1>
+  <h1>🎬<img src="posters/mecanica.jpg" alt="2">  Choose a Movie</h1>
 
   <div class="gallery-wrapper">
     <div id="posterGallery" class="gallery"></div>
