--- a/Cinefilos/index.html
+++ b/Cinefilos/index.html
@@ -139,7 +139,7 @@
 
   <button id="randomPick">🎲 Pick a Random Movie</button>
 
-  <h2>-Pick History-</h2>
+  <h2>Pick History</h2>
   <ul id="history"></ul>
   <button id="clearHistory">🧹 Clear History</button>
 
