--- a/Cinefilos/index.html
+++ b/Cinefilos/index.html
@@ -159,7 +159,9 @@
 
         const fallbackPosters = {
       tt0134817: "posters/mecanica.jpg",
-      tt0110413: "posters/leon.png"
+      tt0110413: "posters/leon.png",
+      tt0034820: "posters/gaucha.jpg",
+      tt0045230: "posters/thief.jpg"
     };
 
    const entries = [
@@ -194,7 +196,9 @@
       { title: "12 Monkeys", imdbID: "tt0114746" },
       { title: "Mecánica Nacional", imdbID: "tt0134817" },
       { title: "Léon: The Professional", imdbID: "tt0110413" },
-      { title: "Collateral", imdbID: "tt0369339" }
+      { title: "Collateral", imdbID: "tt0369339" },
+      { title: "La guerra gaucha", imdbID: "tt0034820" },
+      { title: "The Thief", imdbID: "tt0045230" }
     ];
 
 async function fetchPosterAndBuild(movie) {
