--- a/Cinefilos/index.html
+++ b/Cinefilos/index.html
@@ -196,9 +196,7 @@
       { title: "12 Monkeys", imdbID: "tt0114746" },
       { title: "Mecánica Nacional", imdbID: "tt0134817" },
       { title: "Léon: The Professional", imdbID: "tt0110413" },
-      { title: "Collateral", imdbID: "tt0369339" },
-      { title: "La guerra gaucha", imdbID: "tt0034820" },
-      { title: "The Thief", imdbID: "tt0045230" }
+      { title: "Collateral", imdbID: "tt0369339" }
     ];
 
 async function fetchPosterAndBuild(movie) {
