--- a/Cinefilos/index.html
+++ b/Cinefilos/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>🎞️ Cinefilos Poster Picker</title>
+  <a href="cinefilos/graph.html">About Page</a>
   <style>
     body {
       background: #111;
