--- a/Cinefilos/index.html
+++ b/Cinefilos/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title> <a href="/cinefilos/graph.html" style="display:inline-block; padding:10px 20px; background:#3498db; color:#fff; border-radius:6px; text-decoration:none;">
+  <title> <a href="cinefilos/graph.html" style="display:inline-block; padding:10px 20px; background:#3498db; color:#fff; border-radius:6px; text-decoration:none;">
   📊 Go to Graphs
 </a>
 🎞️ Cinefilos Poster Picker</title>
