--- a/Cinefilos/index.html
+++ b/Cinefilos/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title> 🎞️ Cinefilos Poster Picker</title>
-  <href="Graph.html">About Page2
+<a href="Graph.html">About Page3</a>
   <style>
     body {
       background: #111;
