--- a/Cinefilos/index.html
+++ b/Cinefilos/index.html
@@ -144,7 +144,7 @@
 </head>
 <body>
 
-  <img src="posters/cinefilos.png" alt="Cinefilos" class="header-image">
+  <img src="assets/cinefilos.png" alt="Cinefilos" class="header-image">
 
   <div class="coverflow-container">
     <div id="posterFlow"></div>
@@ -152,17 +152,17 @@
 
   <div class="button-container">
     <button id="randomPick">
-      <img src="posters/button.png" alt="Random Movie">
+      <img src="assets/button.png" alt="Random Movie">
     </button>
     <button id="clearHistory">
-      <img src="posters/button2.png" alt="Clear History">
+      <img src="assets/button2.png" alt="Clear History">
     </button>
   </div>
 
   <ul id="history"></ul>
   <audio id="soundPick" src="sounds/pick.wav"></audio>
 
-  <script src="entries.js"></script>
+  <script src="assets/entries.js"></script>
   <script>
     const flow        = document.getElementById("posterFlow");
     const pickBtn     = document.getElementById("randomPick");
