--- a/Cinefilos/index.html
+++ b/Cinefilos/index.html
@@ -172,7 +172,7 @@
     const apiKey      = "225d3569";
 
     // final fallback image
-    const FALLBACK_IMG  = "posters/fallback.png";
+    const FALLBACK_IMG  = "posters/fallback.jpg";
 
     // override OMDB poster for this one ID
     const localFallback = {
