--- a/Cinefilos/index.html
+++ b/Cinefilos/index.html
@@ -175,27 +175,85 @@
     const FALLBACK_IMG  = "posters/fallback.jpg";
 
     // override OMDB poster for this one ID
-    const localFallback = {
-      tt0134817: "posters/mecanica.jpg",
-      tt0110413: "posters/leon.png",
-      tt0034820: "posters/gaucha.jpg",
-      tt0045230: "posters/thief.jpg",
-      tt0064356: "posters/cow.jpg",
-      tt0123885: "posters/trinquete.jpg",
-      tt0070235: "posters/horse.jpg",
-      tt0075726: "posters/barbara.jpg",
-      tt0089078: "posters/elegido.jpg",
-      tt0113855: "posters/pearl.jpg",
-      tt0896690: "posters/miedo.jpg",
-      tt1910653: "posters/triste.jpg",
-      tt17068914: "posters/borges.jpg",
-      tt1951524: "posters/sanguivorous.jpg",
-      tt6833964: "posters/sonora.jpg",
-      tt13686040: "posters/quarantine.jpg",
-      tt23769666: "posters/1984.jpg",
-      tt19880934: "posters/failure.jpg",
-      tt26675379: "posters/vitoria.jpg"
-    };
+const localFallback = {
+  tt0134817: {
+    path: "posters/mecanica.jpg",
+    title: "Mecánica nacional"
+  },
+  tt0110413: {
+    path: "posters/leon.png",
+    title: "Léon: The Professional"
+  },
+  tt0034820: {
+    path: "posters/gaucha.jpg",
+    title: "The Gaucho War"
+  },
+  tt0045230: {
+    path: "posters/thief.jpg",
+    title: "The Thief"
+  },
+  tt0064356: {
+    path: "posters/cow.jpg",
+    title: "The Cow"
+  },
+  tt0123885: {
+    path: "posters/trinquete.jpg",
+    title: "La hermana Trinquete"
+  },
+  tt0070235: {
+    path: "posters/horse.jpg",
+    title: "I Will Walk Like a Crazy Horse"
+  },
+  tt0075726: {
+    path: "posters/barbara.jpg",
+    title: "Barbara Broadcast"
+  },
+  tt0089078: {
+    path: "posters/elegido.jpg",
+    title: "El elegido"
+  },
+  tt0113855: {
+    path: "posters/pearl.jpg",
+    title: "Mortal Kombat"
+  },
+  tt0896690: {
+    path: "posters/miedo.jpg",
+    title: "El alimento del miedo"
+  },
+  tt1910653: {
+    path: "posters/triste.jpg",
+    title: "Triste"
+  },
+  tt17068914: {
+    path: "posters/borges.jpg",
+    title: "Jorge Luis Borges: Una vita di poesia"
+  },
+  tt1951524: {
+    path: "posters/sanguivorous.jpg",
+    title: "Sanguivorous"
+  },
+  tt6833964: {
+    path: "posters/sonora.jpg",
+    title: "Sonora, the Devil's Highway"
+  },
+  tt13686040: {
+    path: "posters/quarantine.jpg",
+    title: "Quarantine"
+  },
+  tt23769666: {
+    path: "posters/1984.jpg",
+    title: "1984"
+  },
+  tt19880934: {
+    path: "posters/failure.jpg",
+    title: "Failure!"
+  },
+  tt26675379: {
+    path: "posters/vitoria.jpg",
+    title: "Vitória"
+  }
+};
+
 
     // verify that an image URL actually loads (remote or local)
     async function validateImage(url) {
