--- a/Cinefilos/index.html
+++ b/Cinefilos/index.html
@@ -145,7 +145,7 @@
 
     <div class="button-container">
       <button id="randomPick">
-        <img src="assets/button.png" alt="Random Movie">
+        <img src="cinefilos/assets/button.png" alt="Random Movie">
       </button>
       <button id="clearHistory">
         <img src="assets/button2.png" alt="Clear History">
